# credit-risk-modeling

./: README.md  pyproject.toml  script.ipynb
datasets/: cr_loan_no_out.csv  cr_loan_no_out_intuition.csv  cv_results.csv
