[project]
name = "credit-risk-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "Prachya",email = "prachya_sun@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "xgboost (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
